--- a/src/app/private/users/users-list/users-list.component.html
+++ b/src/app/private/users/users-list/users-list.component.html
@@ -1,1 +1,35 @@
-<p>users-list works!</p>
+<div>
+  <h1 class="title">Users</h1>
+  <div class="tableContainer">
+    <table mat-table [dataSource]="users" class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">
+          <div>
+            <a class="nav-link" type="button" (click)="goToUser(element)">{{
+              element.name
+            }}</a>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef>Apellido</th>
+        <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="secondLastName">
+        <th mat-header-cell *matHeaderCellDef>Segundo Apellido</th>
+        <td mat-cell *matCellDef="let element">{{ element.secondLastName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>email</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+</div>
